--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	</head>
 	<body>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/94/three.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/three@0.117.1/examples/jsm/loaders/FBXLoader.js"></script>
 		
-		<script>
+		<script type="module">
+        import { FBXLoader } from "https://cdn.jsdelivr.net/npm/three@0.117.1/examples/jsm/loaders/FBXLoader.js";
 			var camera, scene, renderer;
 			var geometry, material, mesh;
 
