--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/94/three.min.js"></script>
 		
 		<script type="module">
-        import { FBXLoader } from "https://cdn.jsdelivr.net/npm/three@0.117.1/examples/jsm/loaders/FBXLoader.js";
+			import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.117.1/three.min.js";
+        		import { FBXLoader } from "https://cdn.jsdelivr.net/npm/three@0.117.1/examples/jsm/loaders/FBXLoader.js";
 			var camera, scene, renderer;
 			var geometry, material, mesh;
 
