--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/94/three.min.js"></script>
 		
 		<script type="module">
-			import three from 'https://cdn.jsdelivr.net/npm/three@0.170.1/+esm';
+			import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.117.1/+esm';
         		import { FBXLoader } from "https://cdn.jsdelivr.net/npm/three@0.117.1/examples/jsm/loaders/FBXLoader.js";
 			var camera, scene, renderer;
 			var geometry, material, mesh;
