--- a/index.html
+++ b/index.html
@@ -22,16 +22,10 @@
 			function init() {
 
 				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 10 );
-				camera.position.z = 3;
+				camera.position.z = 5;
 
 				scene = new THREE.Scene();
 				scene.background = new THREE.Color( 0xffffff );
-
-				geometry = new THREE.SphereGeometry( 1 );
-				material = new THREE.MeshBasicMaterial( { color: 0x000000, wireframe: true } );
-
-				mesh = new THREE.Mesh( geometry, material );
-				scene.add( mesh );
 
 				renderer = new THREE.WebGLRenderer( { antialias: false } );
 				renderer.setSize( window.innerWidth, window.innerHeight );
@@ -40,7 +34,8 @@
 				const loader = new FBXLoader();
     
 				loader.load('./drg.fbx', function (object) {
-					scene.add(object);
+					object.scene.position.set(0, 0, 0);
+					scene.add(object.scene);
 				});
 				
 			}
