--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				const loader = new FBXLoader();
     
 				loader.load('./drg.fbx', function (object) {
-					object.scene.position.set(0, 0, 0);
-					scene.add(object.scene);
+					object.position.set(0, 0, 0);
+					scene.add(object);
 				});
 				
 			}
