--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 		<script type="module">
 			import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.117.1/+esm';
         		import { FBXLoader } from "https://cdn.jsdelivr.net/npm/three@0.117.1/examples/jsm/loaders/FBXLoader.js";
+			import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.117.1/examples/js/controls/OrbitControls.js';
 			var camera, scene, renderer;
 			var geometry, material, mesh;
+			var controls;
 
 			function init() {
 
@@ -37,11 +39,14 @@
 					object.position.set(0, 0, 0);
 					scene.add(object);
 				});
+
+				controls = new OrbitControls(camera, renderer.domElement);
 				
 			}
 
 			function animate( time ) {
 
+				controls.update();
 				renderer.render( scene, camera );
 				requestAnimationFrame( animate );
 
