--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     
 				loader.load('./drg.fbx', function (object) {
 					object.position.set(0, 0, 0);
+					object.scale.set(0.1, 0.1, 0.1)
 					scene.add(object);
 				});
 
